syntax = "proto3";

package vmessocket.core.transport.internet;
option csharp_namespace = "vmessocket.Core.Transport.Internet";
option go_package = "github.com/vmessocket/vmessocket/transport/internet";
option java_package = "com.vmessocket.core.transport.internet";
option java_multiple_files = true;

import "common/serial/typed_message.proto";

enum TransportProtocol {
  TCP = 0;
  UDP = 1;
  WebSocket = 2;
  HTTP = 3;
}

message TransportConfig {
  TransportProtocol protocol = 1 [ deprecated = true ];
  string protocol_name = 3;
  vmessocket.core.common.serial.TypedMessage settings = 2;
}

message StreamConfig {
  TransportProtocol protocol = 1 [ deprecated = true ];
  string protocol_name = 5;
  repeated TransportConfig transport_settings = 2;
  string security_type = 3;
  repeated vmessocket.core.common.serial.TypedMessage security_settings = 4;
}

message ProxyConfig {
  string tag = 1;

  bool transportLayerProxy = 2;
}
